--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "ecommerce",
+  "homepage": "http://lolita89.github.io/sultan-brompton",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.14.1",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-medium-image-zoom": "^3.0.15",
@@ -14,6 +15,8 @@
     "redux": "^4.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -27,5 +30,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
+  }
 }
