removed the cart link

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ecommerce",
-  "homepage": "http://lolita89.github.io/sultan-brompton",
+  "homepage": "https://lolita89.github.io/React-Ecommerce-App-with-Redux/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
